--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+
+    <title>💪🏻 Fitness App</title>
+
+    <script src="https://kit.fontawesome.com/828ceba3f3.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
