--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="portal"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
